--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Configuration/EmailSettings.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Configuration/EmailSettings.cshtml
@@ -4,7 +4,6 @@
 
 <ricerca-modulo header-text="Email Settings"></ricerca-modulo>
 
-
 <ajax-form asp-action="EmailSettings"
            asp-controller="Configuration"
            on-begin="alertWaid()"
@@ -14,75 +13,55 @@
     <div class="form-horizontal row mt-4">
 
         <div class="col-md-6 form-group">
-
-            @Html.LabelFor(model => model.FromName, htmlAttributes: new { @class = "control-label" })
-
-            @Html.EditorFor(model => model.FromName, new { htmlAttributes = new { @class = "form-control col-md-12", placeholder = "FromName" } })
-
-            @Html.ValidationMessageFor(model => model.FromName, "")
+            @Html.LabelFor(model => model.FromName)
+            @Html.TextBoxFor(model => model.FromName)
+            @Html.ValidationMessageFor(model => model.FromName)
         </div>
 
         <div class="col-md-6 form-group">
-
-            @Html.LabelFor(model => model.FromEmail, htmlAttributes: new { @class = "control-label" })
-
-            @Html.EditorFor(model => model.FromEmail, new { htmlAttributes = new { @class = "form-control col-md-12", placeholder = "FromEmail" } })
-
-            @Html.ValidationMessageFor(model => model.FromEmail, "")
-        </div>
-
-        <div class="col-md-6  form-group">
-            @Html.LabelFor(model => model.SmtpServer, htmlAttributes: new { @class = "control-label" })
-
-            @Html.EditorFor(model => model.SmtpServer, new { htmlAttributes = new { @class = "form-control col-md-12", placeholder = "SmtpServer" } })
-
-            @Html.ValidationMessageFor(model => model.SmtpServer, "")
+            @Html.LabelFor(model => model.FromEmail)
+            @Html.TextBoxFor(model => model.FromEmail)
+            @Html.ValidationMessageFor(model => model.FromEmail)
         </div>
 
         <div class="col-md-6 form-group">
-            @Html.LabelFor(model => model.SmtpPort, htmlAttributes: new { @class = "control-label" })
-
-            @Html.EditorFor(model => model.SmtpPort, new { htmlAttributes = new { @class = "form-control col-md-12", placeholder = "SmtpPort" } })
-
-            @Html.ValidationMessageFor(model => model.SmtpPort, "")
+            @Html.LabelFor(model => model.SmtpServer)
+            @Html.TextBoxFor(model => model.SmtpServer)
+            @Html.ValidationMessageFor(model => model.SmtpServer)
         </div>
 
         <div class="col-md-6 form-group">
-
-            @Html.LabelFor(model => model.SmtpUsername, htmlAttributes: new { @class = "control-label" })
-
-            @Html.EditorFor(model => model.SmtpUsername, new { htmlAttributes = new { @class = "form-control col-md-12", placeholder = "SmtpUsername" } })
-
-            @Html.ValidationMessageFor(model => model.SmtpUsername, "")
+            @Html.LabelFor(model => model.SmtpPort)
+            @Html.TextBoxFor(model => model.SmtpPort)
+            @Html.ValidationMessageFor(model => model.SmtpPort)
         </div>
 
         <div class="col-md-6 form-group">
-
-            @Html.LabelFor(model => model.SmtpPassword, htmlAttributes: new { @class = "control-label" })
-
-            @Html.EditorFor(model => model.SmtpPassword, new { htmlAttributes = new { @class = "form-control col-md-12", placeholder = "SmtpPassword" } })
-
-            @Html.ValidationMessageFor(model => model.SmtpPassword, "")
+            @Html.LabelFor(model => model.SmtpUsername)
+            @Html.TextBoxFor(model => model.SmtpUsername)
+            @Html.ValidationMessageFor(model => model.SmtpUsername)
         </div>
-        
+
+        <div class="col-md-6 form-group">
+            @Html.LabelFor(model => model.SmtpPassword)
+            @Html.TextBoxFor(model => model.SmtpPassword)
+            @Html.ValidationMessageFor(model => model.SmtpPassword)
+        </div>
+
         <div class="col-md-6">
-
             <div class="form-check form-switch">
                 @Html.CheckBoxFor(model => model.SmtpServerAutentication, new { @class = "form-check-input" })
                 <label class="form-check-label fw-bold ml-2" for="SmtpServerAutentication">Smtp Server authentication</label>
             </div>
-            @Html.ValidationMessageFor(model => model.SmtpServerAutentication, "")
-
+            @Html.ValidationMessageFor(model => model.SmtpServerAutentication)
         </div>
 
         <div class="col-md-6">
-
             <div class="form-check form-switch">
                 @Html.CheckBoxFor(model => model.SmtpServerUseSSL, new { @class = "form-check-input" })
                 <label class="form-check-label fw-bold ml-2" for="SmtpServerUseSSL">Smtp Server use SSL</label>
             </div>
-
-            @Html.ValidationMessageFor(model => model.SmtpServerUseSSL, "")
+            @Html.ValidationMessageFor(model => model.SmtpServerUseSSL)
         </div>
 
     </div>
@@ -92,8 +71,4 @@
     </div>
 
 </ajax-form>
-
-
-
-
 
