--- a/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
+++ b/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
     <link href="~/lib/font-awesome/css/all.css" rel="stylesheet" />
     <link href="~/css/validation.css" rel="stylesheet" />
     <link href="~/css/modale.css" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -60,6 +61,17 @@
             @RenderBody()
         </div>
     </main>
+    <script>
+        (function() {
+          // Aggiunge subito le classi agli input text e textarea dentro form-group
+          var inputs = document.querySelectorAll("form .form-group input[type='password'],input[type='text'], form .form-group textarea");
+          for (var i = 0; i < inputs.length; i++) {
+            var el = inputs[i];
+            if (!el.classList.contains("form-control")) el.classList.add("form-control");
+            if (!el.classList.contains("col-md-12")) el.classList.add("col-md-12");
+          }
+        })();
+    </script>
 
 
     <footer class="container-fluid blurEffect">
