--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ChangePassword.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ChangePassword.cshtml
@@ -9,23 +9,23 @@
     <div class="form-horizontal row">
 
         <div class="form-group col-md-6">
-            @Html.LabelFor(model => model.OldPassword, htmlAttributes: new { @class = "control-label" })
-            @Html.TextBoxFor(model => model.OldPassword, new { @class = "form-control", type = "search" })
-            @Html.ValidationMessageFor(model => model.OldPassword, "", new { @class = "text-danger" })
+            @Html.LabelFor(model => model.OldPassword)
+            @Html.PasswordFor(model => model.OldPassword)
+            @Html.ValidationMessageFor(model => model.OldPassword)
         </div>
         <div class="form-group col-md-6">
         </div>
 
         <div class="form-group col-md-6">
-            @Html.LabelFor(model => model.NewPassword, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.NewPassword, new { htmlAttributes = new { @class = "form-control", type = "search" } })
-            @Html.ValidationMessageFor(model => model.NewPassword, "", new { @class = "text-danger" })
+            @Html.LabelFor(model => model.NewPassword)
+            @Html.PasswordFor(model => model.NewPassword)
+            @Html.ValidationMessageFor(model => model.NewPassword)
         </div>
 
         <div class="form-group col-md-6">
-            @Html.LabelFor(model => model.ConfirmNewPassword, htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.ConfirmNewPassword, new { htmlAttributes = new { @class = "form-control", type = "search" } })
-            @Html.ValidationMessageFor(model => model.ConfirmNewPassword, "", new { @class = "text-danger" })
+            @Html.LabelFor(model => model.ConfirmNewPassword)
+            @Html.PasswordFor(model => model.ConfirmNewPassword)
+            @Html.ValidationMessageFor(model => model.ConfirmNewPassword)
         </div>
 
         <div class="modal-footer row mt-5">
@@ -54,5 +54,4 @@
 
         alertWaid();
     }
-
 </script>
