--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ModificaUtente.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ModificaUtente.cshtml
@@ -9,58 +9,41 @@
     <input type="hidden" name="Id" value="@Model.Id" />
 
     <div class="form-horizontal row mt-4">
-        <div class="col-md-6">
-            <div class="form-group">
-                @Html.LabelFor(model => model.Username)
-                <div>@Model.Username</div>
+        <div class="col-md-6 form-group">
+            @Html.LabelFor(model => model.Username)
+            <div>@Model.Username</div>
 
-            </div>
-        </div>
-
-        <div class="col-md-6 ">
-        </div>
-
-        <div class="col-md-6 ">
-            <div class="form-group">
-                @Html.LabelFor(model => model.Nome)
-
-                @Html.TextBoxFor(model => model.Nome)
-
-                @Html.ValidationMessageFor(model => model.Nome, "")
-            </div>
         </div>
 
         <div class="col-md-6">
-            <div class="form-group">
-                @Html.LabelFor(model => model.Cognome)
-
-                @Html.TextBoxFor(model => model.Cognome)
-
-                @Html.ValidationMessageFor(model => model.Cognome, "")
-            </div>
-        </div>
-        <div class="col-md-6">
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Email)
-
-                @Html.TextBoxFor(model => model.Email)
-
-                @Html.ValidationMessageFor(model => model.Email, "")
-            </div>
-        </div>
-        <div class="col-md-6">
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.ConfirmEmail)
-
-                @Html.TextBoxFor(model => model.ConfirmEmail)
-
-                @Html.ValidationMessageFor(model => model.ConfirmEmail, "")
-            </div>
         </div>
 
+        <div class="col-md-6 form-group">
+            @Html.LabelFor(model => model.Nome)
+            @Html.TextBoxFor(model => model.Nome)
+            @Html.ValidationMessageFor(model => model.Nome)
+        </div>
 
+        <div class="col-md-6 form-group">
+            @Html.LabelFor(model => model.Cognome)
+            @Html.TextBoxFor(model => model.Cognome)
+            @Html.ValidationMessageFor(model => model.Cognome)
+        </div>
+        <div class="col-md-6 form-group">
+
+            @Html.LabelFor(model => model.Email)
+            @Html.TextBoxFor(model => model.Email)
+            @Html.ValidationMessageFor(model => model.Email)
+        </div>
+        <div class="col-md-6 form-group">
+
+            @Html.Label("Conferma Email")
+            @Html.TextBoxFor(model => model.ConfirmEmail)
+            @Html.ValidationMessageFor(model => model.ConfirmEmail)
+            </>
+
+
+        </div>
     </div>
 
     <div class="modal-footer" style="margin-top:40px">
@@ -68,7 +51,6 @@
         <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="hideModal()">Chiudi la finestra</button>
 
     </div>
-
 </ajax-form>
 
 
