--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaModulo.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaModulo.cshtml
@@ -4,26 +4,26 @@
 
     <div class="row">
         <div class="col-md-6 form-group">
-            @Html.Label(null, "Username", htmlAttributes: new { @class = "control-label" })
-            @Html.TextBoxFor(model => model.UtentiRicercaVM_Username, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.UtentiRicercaVM_Username, "", new { @class = "text-danger" })
+            @Html.Label("Username")
+            @Html.TextBoxFor(model => model.UtentiRicercaVM_Username)
+            @Html.ValidationMessageFor(model => model.UtentiRicercaVM_Username)
         </div>
         <div class="col-md-6 form-group">
-            @Html.Label(null, "Email", htmlAttributes: new { @class = "control-label" })
-            @Html.TextBoxFor(model => model.UtentiRicercaVM_Email, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.UtentiRicercaVM_Email, "", new { @class = "text-danger" })
+            @Html.Label("Email")
+            @Html.TextBoxFor(model => model.UtentiRicercaVM_Email)
+            @Html.ValidationMessageFor(model => model.UtentiRicercaVM_Email)
         </div>
 
 
         <div class="col-md-6 form-group">
-            @Html.Label(null, "Nome", htmlAttributes: new { @class = "control-label" })
-            @Html.TextBoxFor(model => model.UtentiRicercaVM_Nome, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.UtentiRicercaVM_Nome, "", new { @class = "text-danger" })
+            @Html.Label("Nome")
+            @Html.TextBoxFor(model => model.UtentiRicercaVM_Nome)
+            @Html.ValidationMessageFor(model => model.UtentiRicercaVM_Nome)
         </div>
         <div class="col-md-6 form-group">
-            @Html.Label(null, "Cognome", htmlAttributes: new { @class = "control-label" })
-            @Html.TextBoxFor(model => model.UtentiRicercaVM_Cognome, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.UtentiRicercaVM_Cognome, "", new { @class = "text-danger" })
+            @Html.Label("Cognome")
+            @Html.TextBoxFor(model => model.UtentiRicercaVM_Cognome)
+            @Html.ValidationMessageFor(model => model.UtentiRicercaVM_Cognome)
         </div>
     </div>
 </div>
