--- a/Sediin.Core.WebUi/Views/Authentication/ForgotPassword.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/ForgotPassword.cshtml
@@ -7,13 +7,10 @@
     
     <div class="form-horizontal row mt-4">
         <div class="form-group col-8">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label" })
-
+            @Html.LabelFor(model => model.Email)
             <div class="col-md-12">
-
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control col-md-8", placeholder = "Email registrata" } })
-
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(model => model.Email)
+                @Html.ValidationMessageFor(model => model.Email)
             </div>
         </div>
 
