--- a/Sediin.Core.WebUi/Views/Authentication/ResetPassword.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/ResetPassword.cshtml
@@ -19,21 +19,21 @@
             @Html.HiddenFor(model => model.Code)
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Username" })
-                @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.Username)
+                @Html.TextBoxFor(m => m.Username)
+                @Html.ValidationMessageFor(m => m.Username)
             </div>
 
             <div class="form-group mt-3">
-                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" })
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Nuova password" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.Password)
+                @Html.PasswordFor(model => model.Password)
+                @Html.ValidationMessageFor(model => model.Password)
             </div>
 
             <div class="form-group mt-3">
-                @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label" })
-                @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", placeholder = "Conferma password" } })
-                @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.ConfirmPassword)
+                @Html.PasswordFor(model => model.ConfirmPassword)
+                @Html.ValidationMessageFor(model => model.ConfirmPassword)
             </div>
 
             <div class="text-end mt-4">
