--- a/Sediin.Core.WebUi/Areas/Backend/Views/Shared/_Layout.cshtml
+++ b/Sediin.Core.WebUi/Areas/Backend/Views/Shared/_Layout.cshtml
@@ -16,12 +16,12 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link href="~/lib/bootstrap/dist/bootstrap.custom.css" rel="stylesheet" />
     <link href="~/css/backend.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link href="~/css/navmenu.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
     <link href="~/lib/font-awesome/css/all.css" rel="stylesheet" />
     <link href="~/css/validation.css" rel="stylesheet" />
     <link href="~/css/modale.css" rel="stylesheet" />
-    <link href="~/css/navmenu.css" rel="stylesheet" />
     <link href="~/css/toastr.css" rel="stylesheet" />
 </head>
 
