--- a/Sediin.Core.WebUi/wwwroot/css/backend.css
+++ b/Sediin.Core.WebUi/wwwroot/css/backend.css
@@ -1,4 +1,7 @@
-﻿
+﻿/*pino tuzzolino*/
+
+/* non odificare colori qui, css base del template, poi customizzare tuo css nel color-profile "site.css"*/
+
 body {
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -19,12 +22,89 @@ footer {
     height: 50px;
 }
 
+footer {
+    background-color: #245397;
+    color: white;
+    border-top: 1px solid #fba341;
+}
+
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+}
+
+
+.blink {
+    animation: blink-animation 1s steps(5, start) infinite;
+    -webkit-animation: blink-animation 1s steps(5, start) infinite;
+}
+
+.loadingInput {
+    background-image: url('loading_images/loading.gif');
+    background-color: #ffffff;
+    background-size: 25px 25px;
+    background-position: right center;
+    background-repeat: no-repeat;
+}
+
+/* CONTENT STYLE ----------------------------------------------------- */
+
+#content {
+    width: 100%;
+    padding: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
+    min-height: 100vh;
+    transition: all 0.3s;
+    overflow: hidden;
+}
+
+
+@keyframes blink-animation {
+    to {
+        visibility: hidden;
+    }
+}
+
+@-webkit-keyframes blink-animation {
+    to {
+        visibility: hidden;
+    }
+}
+
+.blurFilter_2px {
+    backdrop-filter: blur(2px);
+    filter: blur(2px);
+}
+
+.pdfobject-container {
+    width: 800px;
+    height: 300px;
+    margin: auto;
+}
+
+.pdfobject {
+    border: solid 1px #666;
+}
+
+.fixed-table-header thead,
+.fixed-table-footer tfoot {
+    position: sticky;
+}
+
+.fixed-table-header thead {
+    inset-block-start: 0; /* "top" */
+}
+
+.fixed-table-footer tfoot {
+    inset-block-end: 0; /* "bottom" */
+}
 
 .doubleunderline {
     text-decoration-line: underline;
     text-decoration-style: double;
 }
-
 
 .form-control {
     width: 100%;
@@ -48,7 +128,6 @@ footer {
 .dl-horizontal dt {
     white-space: normal;
 }
-
 
 .disabled {
     pointer-events: none;
@@ -83,10 +162,8 @@ footer {
 }
 
 
+/* badge */
 
-/* ---------------------------------------------------
-
------------------------------------------------------ */
 .badge {
     --bs-badge-padding-x: 0.65em;
     --bs-badge-padding-y: 0.35em;
@@ -132,12 +209,24 @@ a:focus {
 }
 
 
+/* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
 
-.wrapper {
-    display: flex;
-    width: 100%;
-    align-items: stretch;
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -250px;
+    }
+
+        #sidebar.active {
+            margin-left: 0;
+        }
+
+    #sidebarCollapse span {
+        display: none;
+    }
 }
+
 
 
 #sidebar ul li.active > a,
@@ -163,26 +252,6 @@ a.article:hover {
     background: #6d7fcc !important;
 }
 
-.loadingInput {
-    background-image: url('loading_images/loading.gif');
-    background-color: #ffffff;
-    background-size: 25px 25px;
-    background-position: right center;
-    background-repeat: no-repeat;
-}
-/* ---------------------------------------------------
-    CONTENT STYLE
------------------------------------------------------ */
-
-#content {
-    width: 100%;
-    padding: 20px;
-    padding-left: 0px;
-    padding-right: 0px;
-    min-height: 100vh;
-    transition: all 0.3s;
-    overflow: hidden;
-}
 
 
 .row.equal-cols {
@@ -215,12 +284,302 @@ a.article:hover {
         }
 
 
+.tab-content {
+    line-height: 25px;
+    border-top: 5px solid;
+    padding: 30px 25px;
+}
+
+.tab-content {
+    background: #fdfdfd;
+    border: 1px solid #ddd;
+    border-top-color: #082c45;
+}
 
 
 
+/* custom file upload */
+.custom-file {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 2.5rem;
+    margin-bottom: 0;
+}
+
+.custom-file-input {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    height: 2.5rem;
+    margin: 0;
+    opacity: 0; /* Nasconde l’input */
+    cursor: pointer;
+}
+
+.custom-file-label {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 2.5rem;
+    padding: 0.5rem 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    cursor: pointer;
+    user-select: none;
+}
+
+    /* Pulsante "Sfoglia" più evidente */
+    .custom-file-label::after {
+        content: "Sfoglia";
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 2.5rem;
+        padding: 0 1.2rem;
+        background-color: #007bff; /* blu Bootstrap */
+        color: white;
+        border-top-right-radius: 0.25rem;
+        border-bottom-right-radius: 0.25rem;
+        border-left: 1px solid #0069d9;
+        font-weight: 600;
+        transition: background-color 0.3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        user-select: none;
+    }
+
+    /* Hover sul pulsante */
+    .custom-file-input:hover ~ .custom-file-label::after,
+    .custom-file-label:hover::after {
+        background-color: #0056b3;
+        border-left-color: #004085;
+    }
+
+/* Focus input file: evidenzia bordo */
+.custom-file-input:focus ~ .custom-file-label {
+    border-color: #80bdff;
+    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+}
+
+a.link-black {
+    color: black;
+    text-decoration: underline;
+}
+
+    a.link-black:hover {
+        color: #565857;
+        text-decoration: none;
+    }
+
+
+.bg-light-gray {
+    --bs-bg-opacity: 1;
+    background-color: #fbfbfb !important;
+}
+
+.control-label {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+/* login registrazione e change password*/
+
+.email-confirmation-container {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f7f9fc;
+    padding: 2rem;
+}
+
+.email-confirmation-box {
+    background: #fff;
+    border-radius: 16px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    padding: 2.5rem;
+    max-width: 500px;
+    width: 100%;
+}
+
+    .email-confirmation-box h2 {
+        font-weight: 600;
+    }
+
+    .email-confirmation-box .alert {
+        border-radius: 12px;
+        font-size: 1rem;
+        padding: 1.25rem 1.5rem;
+    }
+
+
+.login-container {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f7f9fc;
+}
+
+.login-box {
+    background: #fff;
+    border-radius: 16px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    padding: 2rem 2.5rem;
+    width: 100%;
+    max-width: 500px;
+}
+
+    .login-box h4 {
+        font-weight: 600;
+        color: #333;
+    }
+
+    .login-box .form-control {
+        border-radius: 8px;
+        padding: 0.75rem 1rem;
+    }
+
+    .login-box .btn {
+        border-radius: 8px;
+        padding: 0.75rem;
+    }
+
+
+.reset-container {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f7f9fc;
+    padding: 2rem;
+}
+
+.reset-box {
+    background: #fff;
+    border-radius: 16px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    padding: 2.5rem;
+    max-width: 500px;
+    width: 100%;
+}
+
+    .reset-box h4 {
+        font-weight: 600;
+        color: #333;
+    }
+
+    .reset-box .form-control {
+        border-radius: 8px;
+        padding: 0.75rem 1rem;
+    }
+
+    .reset-box .btn {
+        border-radius: 8px;
+        padding: 0.6rem 1.2rem;
+    }
+
+    /*end */
 
 
 
+.dropdown-menu-gray {
+    --bs-dropdown-color: #98999a;
+    --bs-dropdown-bg: #98999a;
+    --bs-dropdown-border-color: var( --bs-border-color-translucent);
+    --bs-dropdown-link-color: black;
+    --bs-dropdown-link-hover-color: black;
+    --bs-dropdown-divider-bg: var( --bs-border-color-translucent);
+    --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
+    --bs-dropdown-link-active-color: #fff;
+    --bs-dropdown-link-active-bg: #e6ecf5;
+    --bs-dropdown-link-disabled-color: #adb5bd;
+    --bs-dropdown-header-color: #adb5bd;
+}
+
+.dropdown-menu-blue {
+    --bs-dropdown-color: #dee2e6;
+    --bs-dropdown-bg: #082c45;
+    --bs-dropdown-border-color: var( --bs-border-color-translucent);
+    --bs-dropdown-link-color: #dee2e6;
+    --bs-dropdown-link-hover-color: #fff;
+    --bs-dropdown-divider-bg: var( --bs-border-color-translucent);
+    --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
+    --bs-dropdown-link-active-color: #fff;
+    --bs-dropdown-link-active-bg: #0d6efd;
+    --bs-dropdown-link-disabled-color: #adb5bd;
+    --bs-dropdown-header-color: #adb5bd;
+}
+
+.dropdown-menu-verde {
+    --bs-dropdown-color: #dee2e6;
+    --bs-dropdown-bg: #084b26;
+    --bs-dropdown-border-color: var( --bs-border-color-translucent);
+    --bs-dropdown-link-color: #dee2e6;
+    --bs-dropdown-link-hover-color: #fff;
+    --bs-dropdown-divider-bg: var( --bs-border-color-translucent);
+    --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
+    --bs-dropdown-link-active-color: #fff;
+    --bs-dropdown-link-active-bg: #0d6efd;
+    --bs-dropdown-link-disabled-color: #adb5bd;
+    --bs-dropdown-header-color: #adb5bd;
+}
 
 
+.btn-blue {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #082c45;
+    --bs-btn-border-color: #0a4d7c;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #0a4d7c;
+    --bs-btn-hover-border-color: #082c45;
+    --bs-btn-focus-shadow-rgb: 49, 132, 253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #082c45;
+    --bs-btn-active-border-color: #0a4d7c;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #082c45;
+    --bs-btn-disabled-border-color: #0a4d7c;
+}
+
+.btn-verde {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #084b26;
+    --bs-btn-border-color: #15713e;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #15713e;
+    --bs-btn-hover-border-color: #084b26;
+    --bs-btn-focus-shadow-rgb: 49, 132, 253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #084b26;
+    --bs-btn-active-border-color: #15713e;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #084b26;
+    --bs-btn-disabled-border-color: #15713e;
+}
+
+.table-verde {
+    --bs-table-color: #fff;
+    --bs-table-bg: #084b26;
+    --bs-table-border-color: #a6b5cc;
+    --bs-table-striped-bg: #c5d7f2;
+    --bs-table-striped-color: #000;
+    --bs-table-active-bg: #bacbe6;
+    --bs-table-active-color: #000;
+    --bs-table-hover-bg: #bfd1ec;
+    --bs-table-hover-color: #000;
+    color: var(--bs-table-color);
+    border-color: var(--bs-table-border-color);
+}
 
