--- a/Sediin.Core.WebUi/wwwroot/css/navmenu.css
+++ b/Sediin.Core.WebUi/wwwroot/css/navmenu.css
@@ -70,17 +70,6 @@ a[data-toggle="collapse"] {
     position: relative;
 }
 
-
-#content {
-    width: 100%;
-    padding: 20px;
-    padding-left: 0px;
-    padding-right: 0px;
-    min-height: 100vh;
-    transition: all 0.3s;
-    overflow: hidden;
-}
-
 #sidebar {
     border-right: 1px solid #212529;
 }
@@ -89,6 +78,37 @@ a[data-toggle="collapse"] {
         border-bottom: 1px solid #212529;
     }
 
-.marginMenuIcon {
-    margin-right: 10px;
+/*--------------------------------------------------------*/
+
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+    color: white;
+    background-color: #245397;
 }
+
+.nav-pills .nav-link {
+    color: #082c45;
+    border-top: 1px solid #adb5bd;
+    border-left: 1px solid #adb5bd;
+    border-right: 1px solid #adb5bd;
+}
+
+/*--------------------------------------------------------*/
+
+
+
+.nav-link {
+    color: white;
+}
+
+    .nav-link:hover {
+        color: #245397;
+    }
+
+    .nav-link:active {
+        color: white !important;
+    }
+
+    .nav-link:focus {
+        color: white;
+    }
